# crudcreator

./: .dockerignore  .gitignore  CONTRIBUTING.rst  LICENSE  README.rst  requirements.txt  run_test.py  setup.cfg  start_app_test.py
scripts/: build.ps1  build_doc.ps1  publish.ps1
src/crudcreator/: AbstractCRUDableEntityType.py  AbstractDescriptor.py  FieldOfCRUDableEntityType.py  Fields.py  Filter.py  Link.py  LinkType.py  OptionModel.py  Sentinel.py  Sort.py  exceptions.py  schema.py
test/: addons.py  app.py  engine.py  settings.py  utils.py
test/descriptor/: entity1.json  entity10.json  entity11.json  entity12.json  entity13.json  entity13_bis.json  entity13_quater.json  entity13_ter.json  entity14.json  entity15.json  entity16.json  entity17.json  entity18.json  entity19.json  entity2.json  entity20.json  entity21.json  entity22.json  entity23.json  entity24.json  entity25.json  entity26.json  entity27.json  entity3.json  entity4.json  entity6.json  entity7.json  entity7_bis.json  entity8.json  entity9.json  entitymany.json  user.json
test/docker/: docker-compose.yaml
test/rest_to_sql/: _TODO_test_schema.py  test_bulk_update.py  test_create.py  test_delete.py  test_read.py  test_update.py  test_update_or_create.py
test/settings/: async_postgres.json  async_postgres_docker.json  postgres.json  sqlite.json
test/sql/: reinit_1.sql  reinit_10_postgres.sql  reinit_10_sqlite.sql  reinit_11.sql  reinit_12.sql  reinit_13.sql  reinit_14.sql  reinit_15.sql  reinit_16.sql  reinit_17.sql  reinit_18.sql  reinit_19.sql  reinit_2.sql  reinit_20.sql  reinit_21.sql  (+17 more)
(+162 files in other folders)
