[metadata]
name = crudcreator
version = 0.0.1
authors = [
  { name="Valentin NOEL", email="valentin@nedelab.com" },
  { name="NEDELAB SARL", email="contact@nedelab.com" }]
long_description = file: README.rst
summary = Create CRUD interfaces faster.
readme = "README.rst"
require_-python = ">=3.9"
license_files = LICENSE
classifiers=Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Framework :: FastAPI
    Framework :: Pydantic
    License :: OSI Approved :: MIT License

[options]
install_requires =
    fastapi
    uvicorn
    SQLAlchemy
package_dir=
    =src
packages = find:

[options.packages.find]
where=src


[options.entry_points]
console_scripts =
    crudcreator = crudcreator.scripts:crudcreator

[options.package_data]
* = docs/**


[project.urls]
Homepage = "https://github.com/nedelab/crudcreator"
Issues = "https://github.com/nedelab/crudcreator/issues"